--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
    
   
-    <title>taraSaleh</title>
+    <title>ArdalanSaleh</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
